AC_PREREQ([2.69])
AC_INIT(auto1, 1.0)
AC_CONFIG_AUX_DIR(config)
#ACX_NONCANONICAL_BUILD
#ACX_NONCANONICAL_HOST
#ACX_NONCANONICAL_TARGET
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE([subdir-objects])
AC_PROG_CXX
AM_PROG_AS
AC_CONFIG_FILES(Makefile)
LT_PREREQ([2.2])
LT_INIT
AC_PROG_INSTALL
#ACX_PROG_LN
AC_PROG_LN_S
AC_CONFIG_MACRO_DIR([config])
AC_OUTPUT
