AC_PREREQ([2.69])
AC_INIT(auto1, 1.0)
AC_PREFIX_DEFAULT(/usr/local/cm3)
AC_PREFIX_PROGRAM(cm3)
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_MACRO_DIR([config])
AM_INIT_AUTOMAKE([subdir-objects])
AC_PROG_CXX
AM_PROG_AS
AC_CONFIG_FILES(Makefile)
LT_PREREQ([2.2])
LT_INIT(win32-dll pic-only)
AC_PROG_INSTALL
AC_OUTPUT
