# -I /System/Library/Frameworks/ApplicationServices.framework/Headers
# -I /System/Library/Frameworks/ApplicationServices.framework/Frameworks/QD.framework/Headers
# -I /System/Library/Frameworks/ApplicationServices.framework/Frameworks/CoreGraphics.framework/Headers

AUTOMAKE_OPTIONS = foreign
ACLOCAL_AMFLAGS= -I config

lib_LTLIBRARIES = libj.la
libj_la_SOURCES = \
 j_win.cpp \
 j.cpp \
 jcpp.cpp \
 j_errno.cpp \
 j_malloc.cpp \
 j_stdio.cpp \
 j_macos.cpp \
 j_macosx.cpp
